--- a/index.html
+++ b/index.html
@@ -597,6 +597,7 @@
 
     <!-- Load all game modules in dependency order -->
     <script src="./src/config.js"></script>
+    <script src="./src/utils.js"></script>
     <script src="./src/sprites/player.js"></script>
     <script src="./src/sprites/enemies/goblin.js"></script>
     <script src="./src/sprites/enemies/skeleton.js"></script>
