--- a/test-victory.html
+++ b/test-victory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victory Test - HTML Pixel Roguelike</title>
+    <title>Victory Test - Memory Cavern</title>
     <style>
         body {
             font-family: monospace;
