--- a/index.html
+++ b/index.html
@@ -651,13 +651,26 @@
     <script src="./src/sprites/player.js"></script>
     <script src="./src/sprites/enemies/goblin.js"></script>
     <script src="./src/sprites/enemies/skeleton.js"></script>
+    <script src="./src/sprites/enemies/wolf.js"></script>
+    <script src="./src/sprites/enemies/treant.js"></script>
     <script src="./src/sprites/items/consumables.js"></script>
     <script src="./src/sprites/items/treasure.js"></script>
     <script src="./src/sprites/items/equipment.js"></script>
     <script src="./src/sprites/environment/terrain.js"></script>
     <script src="./src/sprites/environment/decorations.js"></script>
+    <script src="./src/sprites/environment/cavern.js"></script>
+    <script src="./src/sprites/environment/forest.js"></script>
     <script src="./src/sprites/index.js"></script>
     <script src="./src/entities.js"></script>
+    <!-- Level System modules (load after sprites) -->
+    <script src="./src/levels/LevelDefinition.js"></script>
+    <script src="./src/levels/AreaManager.js"></script>
+    <script src="./src/levels/generators/BaseGenerator.js"></script>
+    <script src="./src/levels/generators/CavernGenerator.js"></script>
+    <script src="./src/levels/generators/ForestGenerator.js"></script>
+    <script src="./src/levels/areas/caverns.js"></script>
+    <script src="./src/levels/areas/forest.js"></script>
+    <!-- Core game modules -->
     <script src="./src/mapGenerator.js"></script>
     <script src="./src/gameState.js"></script>
     <script src="./src/renderer.js"></script>
