--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@
     <script src="./src/sprites/player.js"></script>
     <script src="./src/sprites/enemies/goblin.js"></script>
     <script src="./src/sprites/enemies/skeleton.js"></script>
+    <script src="./src/sprites/enemies/skeletonLord.js"></script>
     <script src="./src/sprites/enemies/wolf.js"></script>
     <script src="./src/sprites/enemies/treant.js"></script>
     <script src="./src/sprites/items/consumables.js"></script>
