--- a/index.html
+++ b/index.html
@@ -654,6 +654,9 @@
     <script src="./src/sprites/enemies/skeletonLord.js"></script>
     <script src="./src/sprites/enemies/wolf.js"></script>
     <script src="./src/sprites/enemies/treant.js"></script>
+    <script src="./src/sprites/enemies/sporeling.js"></script>
+    <script src="./src/sprites/enemies/fungalKnight.js"></script>
+    <script src="./src/sprites/enemies/sporeMother.js"></script>
     <script src="./src/sprites/items/consumables.js"></script>
     <script src="./src/sprites/items/treasure.js"></script>
     <script src="./src/sprites/items/equipment.js"></script>
@@ -661,6 +664,7 @@
     <script src="./src/sprites/environment/decorations.js"></script>
     <script src="./src/sprites/environment/cavern.js"></script>
     <script src="./src/sprites/environment/forest.js"></script>
+    <script src="./src/sprites/environment/mushroom.js"></script>
     <script src="./src/sprites/index.js"></script>
     <script src="./src/entities.js"></script>
     <!-- Level System modules (load after sprites) -->
@@ -669,8 +673,10 @@
     <script src="./src/levels/generators/BaseGenerator.js"></script>
     <script src="./src/levels/generators/CavernGenerator.js"></script>
     <script src="./src/levels/generators/ForestGenerator.js"></script>
+    <script src="./src/levels/generators/MushroomGenerator.js"></script>
     <script src="./src/levels/areas/caverns.js"></script>
     <script src="./src/levels/areas/forest.js"></script>
+    <script src="./src/levels/areas/mushroom.js"></script>
     <!-- Core game modules -->
     <script src="./src/mapGenerator.js"></script>
     <script src="./src/gameState.js"></script>
