--- a/index.html
+++ b/index.html
@@ -657,6 +657,9 @@
     <script src="./src/sprites/enemies/sporeling.js"></script>
     <script src="./src/sprites/enemies/fungalKnight.js"></script>
     <script src="./src/sprites/enemies/sporeMother.js"></script>
+    <script src="./src/sprites/enemies/stardustSprite.js"></script>
+    <script src="./src/sprites/enemies/cosmicGuardian.js"></script>
+    <script src="./src/sprites/enemies/stellarArchitect.js"></script>
     <script src="./src/sprites/items/consumables.js"></script>
     <script src="./src/sprites/items/treasure.js"></script>
     <script src="./src/sprites/items/equipment.js"></script>
@@ -665,6 +668,7 @@
     <script src="./src/sprites/environment/cavern.js"></script>
     <script src="./src/sprites/environment/forest.js"></script>
     <script src="./src/sprites/environment/mushroom.js"></script>
+    <script src="./src/sprites/environment/stellar.js"></script>
     <script src="./src/sprites/index.js"></script>
     <script src="./src/entities.js"></script>
     <!-- Level System modules (load after sprites) -->
@@ -674,9 +678,11 @@
     <script src="./src/levels/generators/CavernGenerator.js"></script>
     <script src="./src/levels/generators/ForestGenerator.js"></script>
     <script src="./src/levels/generators/MushroomGenerator.js"></script>
+    <script src="./src/levels/generators/StellarGenerator.js"></script>
     <script src="./src/levels/areas/caverns.js"></script>
     <script src="./src/levels/areas/forest.js"></script>
     <script src="./src/levels/areas/mushroom.js"></script>
+    <script src="./src/levels/areas/stellar.js"></script>
     <!-- Core game modules -->
     <script src="./src/mapGenerator.js"></script>
     <script src="./src/gameState.js"></script>
