--- a/index.html
+++ b/index.html
@@ -693,6 +693,8 @@
     <script src="./src/cutscenes/CutsceneManager.js"></script>
     <script src="./src/core/CampaignSystem.js"></script>
     <script src="./src/ui/MenuSystem.js"></script>
+    <!-- Auto-exploration system (completely rewritten) -->
+    <script src="./src/auto/AutoExplorerNew.js"></script>
     <script src="./src/game.js"></script>
     
     <script>
