--- a/index.html
+++ b/index.html
@@ -699,6 +699,7 @@
     <!-- Unified Auto-Completion System (load after game) -->
     <script src="./src/auto/AutoExplorerFinal.js"></script>
     <script src="./src/auto/AutoExplorerEnhanced.js"></script>
+    <script src="./src/auto/AutoExplorerOptimized.js"></script>
     <script src="./src/auto/AutoExplorerManager.js"></script>
     <script src="./src/auto/AutoGameRunner.js"></script>
     <script src="./src/auto/AutoSystem.js"></script>
